[tool.poetry]
name = "virial_python"
version = "0.1.0"
description = ""
authors = ["Ryu Yamada"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
matplotlib = "^3.1.2"
tqdm = "^4.42.0"
jupyterlab = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
